# framework.system.sensord

./: CMakeLists.txt  sensor_plugins.xml.in  sensord.manifest  sensord.rule  sensors.xml.in  sf_data_stream.conf.in  sf_processor.conf.in  sf_sensor.conf.in  virtual_sensors.xml.in
dummy/: CMakeLists.txt  sensor.pc.in
dummy/include/: sensor_internal.h  sensor_internal_deprecated.h
packaging/: sensord.service  sensord.socket  sensord.spec  sensord_event.socket
src/: CMakeLists.txt
src/accel/: CMakeLists.txt  accel-processor.cpp  accel-processor.h  accel-sensor.cpp  accel-sensor.h  accel_sensor.cpp  accel_sensor.h  accel_sensor_hal.cpp  accel_sensor_hal.h
src/auto_rotation/: CMakeLists.txt  auto_rotation_sensor.cpp  auto_rotation_sensor.h
src/bio/: CMakeLists.txt  bio-processor.cpp  bio-processor.h  bio-sensor.cpp  bio-sensor.h  bio_sensor.cpp  bio_sensor.h  bio_sensor_hal.cpp  bio_sensor_hal.h
src/bio_hrm/: CMakeLists.txt  bio-hrm-processor.cpp  bio-hrm-processor.h  bio-hrm-sensor.cpp  bio-hrm-sensor.h  bio_hrm_phy_sensor.cpp  bio_hrm_phy_sensor.h  bio_hrm_sensor_hal.cpp  bio_hrm_sensor_hal.h  bio_hrm_virt_sensor.cpp  bio_hrm_virt_sensor.h
src/bio_led_green/: CMakeLists.txt  bio_led_green_sensor.cpp  bio_led_green_sensor.h
src/context/: CMakeLists.txt  command_history.cpp  command_history.h  context-processor.cpp  context-processor.h  context-sensor.cpp  context-sensor.h  context_sensor.cpp  context_sensor.h  context_sensor_hal.cpp  context_sensor_hal.h
src/dust/: CMakeLists.txt  dust_sensor.cpp  dust_sensor.h  dust_sensor_hal.cpp  dust_sensor_hal.h
src/flat/: CMakeLists.txt  flat-processor.cpp  flat-processor.h  flat-sensor.cpp  flat-sensor.h
src/geo/: CMakeLists.txt  geo-processor.cpp  geo-processor.h  geo_sensor.cpp  geo_sensor.h  geo_sensor_hal.cpp  geo_sensor_hal.h
src/geo_uncal/: CMakeLists.txt  geo_uncal_sensor.cpp  geo_uncal_sensor.h  geo_uncal_sensor_hal.cpp  geo_uncal_sensor_hal.h
src/gravity/: CMakeLists.txt  gravity_sensor.cpp  gravity_sensor.h
src/gyro/: CMakeLists.txt  gyro-processor.cpp  gyro-processor.h  gyro-sensor.cpp  gyro-sensor.h  gyro_sensor.cpp  gyro_sensor.h  gyro_sensor_hal.cpp  gyro_sensor_hal.h
src/gyro_uncal/: CMakeLists.txt  gyro_uncal_sensor.cpp  gyro_uncal_sensor.h
src/humidity/: CMakeLists.txt  humidity_sensor.cpp  humidity_sensor.h  humidity_sensor_hal.cpp  humidity_sensor_hal.h
src/libsensord/: CMakeLists.txt  client.cpp  client_common.cpp  client_common.h  command_channel.cpp  command_channel.h  creg_event_info.h  csensor_event_listener.cpp  csensor_event_listener.h  csensor_handle_info.cpp  csensor_handle_info.h  poller.cpp  poller.h  sensor.h  sensor_accel.h  sensor_barometer.h  sensor_bio.h  sensor_bio_hrm.h  sensor_context.h  sensor_flat.h  sensor_fusion.h  sensor_gaming_rv.h  sensor_geomag.h  sensor_geomag_uncal.h  sensor_geomagnetic_rv.h  sensor_gyro.h  sensor_gyro_uncal.h  sensor_info_manager.cpp  sensor_info_manager.h  sensor_internal.h  sensor_internal_deprecated.h  sensor_light.h  sensor_motion.h  sensor_pedo.h  sensor_proxi.h  sensor_tilt.h
src/light/: CMakeLists.txt  light-processor.cpp  light-processor.h  light-sensor.cpp  light-sensor.h  light_sensor.cpp  light_sensor.h  light_sensor_hal.cpp  light_sensor_hal.h
src/linear_accel/: CMakeLists.txt  linear_accel_sensor.cpp  linear_accel_sensor.h
src/motion/: CMakeLists.txt  motion_sensor.cpp  motion_sensor.h
src/orientation/: CMakeLists.txt  orientation_sensor.cpp  orientation_sensor.h
src/pedo/: CMakeLists.txt  pedo-processor.cpp  pedo-processor.h  pedo-sensor.cpp  pedo-sensor.h
src/pir/: CMakeLists.txt  pir_sensor.cpp  pir_sensor.h  pir_sensor_hal.cpp  pir_sensor_hal.h
src/pir_long/: CMakeLists.txt  pir_long_sensor.cpp  pir_long_sensor.h  pir_long_sensor_hal.cpp  pir_long_sensor_hal.h
src/pressure/: CMakeLists.txt  pressure_sensor.cpp  pressure_sensor.h  pressure_sensor_hal.cpp  pressure_sensor_hal.h
src/proxi/: CMakeLists.txt  proxi-processor.cpp  proxi-processor.h  proxi-sensor.cpp  proxi-sensor.h  proxi_sensor.cpp  proxi_sensor.h  proxi_sensor_hal.cpp  proxi_sensor_hal.h
src/rotation_vector/: CMakeLists.txt
src/sensor_fusion/: CMakeLists.txt  euler_angles.cpp  euler_angles.h  orientation_filter.cpp  orientation_filter.h  quaternion.cpp  quaternion.h  rotation_matrix.cpp  sensor_data.cpp  sensor_data.h  vector.cpp  vector.h
src/server/: CMakeLists.txt  ccatalog.cpp  ccatalog.h  cclient_info_manager.cpp  cclient_info_manager.h  cclient_sensor_record.cpp  cclient_sensor_record.h  cdata_stream.cpp  cdata_stream.h  cfilter_catalog.cpp  cfilter_catalog.h  command_worker.cpp  command_worker.h  cprocessor_catalog.cpp  cprocessor_catalog.h  csensor_catalog.cpp  csensor_catalog.h  csensor_event_dispatcher.cpp  csensor_event_dispatcher.h  csensor_usage.cpp  csensor_usage.h  cserver.cpp  cserver.h  ctrim.cpp  ctrim.h  dbus_util.cpp  main.cpp  permission_checker.cpp  resource_str.cpp  resource_str.h  server.cpp
src/shared/: CMakeLists.txt  cbase_lock.cpp  cbase_lock.h  cclient_info_manager.cpp  cclient_info_manager.h  cclient_sensor_record.cpp  cclient_sensor_record.h  cconfig.cpp  cconfig.h  cevent_socket.cpp  cevent_socket.h  cfilter_module.cpp  cfilter_module.h  cinterval_info_list.cpp  cinterval_info_list.h  cipc_worker.cpp  cipc_worker.h  clist.cpp  clist.h  cmodule.cpp  cmodule.h  cmutex.cpp  cmutex.h  cobject_type.cpp  cobject_type.h  common.cpp  common.h  cpacket.cpp  cpacket.h  cprocessor_module.cpp  cprocessor_module.h  crw_lock.cpp  crw_lock.h  csensor_config.cpp  csensor_config.h  csensor_event_dispatcher.cpp  csensor_event_dispatcher.h  csensor_event_queue.cpp  csensor_event_queue.h  csensor_module.cpp  (+24 more)
src/temperature/: CMakeLists.txt  temperature_sensor.cpp  temperature_sensor.h  temperature_sensor_hal.cpp  temperature_sensor_hal.h
src/tilt/: CMakeLists.txt  tilt_sensor.cpp  tilt_sensor.h
src/ultraviolet/: ultraviolet_sensor.cpp  ultraviolet_sensor.h  ultraviolet_sensor_hal.cpp  ultraviolet_sensor_hal.h
src/uncal_geo/: CMakeLists.txt  uncal_geo_sensor.cpp
src/uncal_gyro/: CMakeLists.txt
test/src/: api-test.c  (+4 more)
(+12 files in other folders)
